# rs-case

./: COVERAGE.md  COVERAGE.zh_CN.md  Cargo.toml  README.md  README.zh_CN.md
src/: case_style.rs  case_style_error.rs  case_style_validation_error.rs  lib.rs
src/internal/: boundary.rs  char_type.rs  conversion.rs  mod.rs
tests/: case_style_error_tests.rs  case_style_tests.rs  case_style_validation_error_tests.rs  internal_tests.rs
tests/internal/: boundary_tests.rs  char_type_tests.rs  conversion_tests.rs  mod.rs
