[package]
name = "qubit-case"
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-case"
description = "Naming style detection and conversion helpers for Rust applications"
homepage = "https://github.com/qubit-ltd/rs-case"
documentation = "https://docs.rs/qubit-case"
readme = "README.md"
keywords = ["naming", "case", "identifier", "utility", "qubit"]
categories = ["development-tools", "text-processing", "rust-patterns"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_case"
doctest = true
test = true

[dependencies]
